# news-summaries

./: .env.example  .gitignore  main.py  pyproject.toml
config/: settings.yaml  sources.yaml
src/: __init__.py  config.py  dedup.py  models.py
src/agent/: __init__.py  summarizer.py
src/output/: __init__.py  markdown.py
src/sources/: __init__.py  newsapi.py  rss.py
src/storage/: __init__.py
